
import "Job.proto";

package com.lvl6.proto;

option java_outer_classname = "QuestProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message FullQuestProto {
     optional int32 questId = 1;
     optional int32 cityId = 2;
     optional string name = 3;
     optional string description = 4;
     optional string doneResponse = 5;
     optional DialogueProto acceptDialogue = 6;
     optional int32 assetNumWithinCity = 7;
     optional int32 coinsGained = 8;
     optional int32 diamondsGained = 9;
     optional int32 expGained = 10;
     optional int32 monsterId = 11;
     repeated int32 questsRequiredForThis = 12;
     repeated int32 taskReqs = 13;
     repeated int32 upgradeStructJobsReqs = 14;
     repeated int32 buildStructJobsReqs = 15;
     repeated int32 monsterJobsReqs = 16;
     optional int32 coinRetrievalReq = 17;
     optional SpecialQuestAction specialQuestActionReq = 18; 
     optional int32 numComponentsForGood = 19;
     optional string questGiverName = 20;
     optional string questGiverImageSuffix = 21;
     optional int32 priority = 22;
}

//------------------------------------------------------------------------------------------

message DialogueProto { 
	repeated SpeechSegmentProto speechSegment = 1;

	message SpeechSegmentProto {
		optional DialogueSpeaker speaker = 1;
		optional string speakerText = 2;
		
		enum DialogueSpeaker {
			PLAYER_TYPE = 1;
			TUTORIAL_GIRL = 2;
			QUESTGIVER_1 = 3;		// Farmer Mitch
			QUESTGIVER_2 = 4;		// Captain Riz
			QUESTGIVER_3 = 5;		// Sean The Brave
			QUESTGIVER_4 = 6;		// Captain Riz
			QUESTGIVER_5 = 7; 		// Sailor Steve
		}
	}
}

//------------------------------------------------------------------------------------------

enum SpecialQuestAction {
	REQUEST_JOIN_CLAN = 1;
	EVOLVE_A_MONSTER = 2;
}

//------------------------------------------------------------------------------------------

message FullUserQuestDataLargeProto {
     optional int32 userId = 1;
     optional int32 questId = 2;
     optional bool isRedeemed = 3;
     optional bool isComplete = 4;
     repeated MinimumUserBuildStructJobProto requiredBuildStructJobProgress = 5;
     repeated MinimumUserUpgradeStructJobProto requiredUpgradeStructJobProgress = 6;
     repeated MinimumUserQuestTaskProto requiredTasksProgress = 7;
     optional int32 coinsRetrievedForReq = 8;
     optional int32 numComponentsComplete = 9;
}

message MinimumUserQuestTaskProto {
     optional int32 userId = 1;
     optional int32 questId = 2;
     optional int32 taskId = 3;
     optional int32 numTimesActed = 4;
}

//------------------------------------------------------------------------------------------
